[metadata]
name = edl-mod
version = 0.0.1
author = Eric Johnfelt
author_email = ejohnfel@hotmail.com
description = Module for editting and searching external dynamic lists (EDLs)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ejohnfel/edl
project_urls =
    Bug Tracker = https://github.com/ejohnfel/edl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
